Integrate (and refactor) fully to show a useful timer up to the end of the current or the start of the upcoming event.

--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -21,7 +21,7 @@
       </mat-form-field>
     </div>
     <a [routerLink]="'.'" [fragment]="'eventList'">
-      <div class="toprow-counter {{ timerDisplay.countdownCssClass }}">{{ timerDisplay.nextEventTimeString }}</div>
+      <div class="toprow-counter {{ timerDisplay.timerCssClass }}">{{ timerDisplay.timerString }}</div>
     </a>
   </div>
 
