--- a/bof/css/fade.css
+++ b/bof/css/fade.css
@@ -1,22 +1,23 @@
 @import "compass/css3";
 
-html, body {
-	height: 100%;
-	background-color: #333;
-	-webkit-font-smoothing: antialiased;
-	overflow: hidden;
-	margin: unset;
+html,
+body {
+  height: 100%;
+  background-color: #333;
+  -webkit-font-smoothing: antialiased;
+  overflow: hidden;
+  margin: unset;
 }
 
 .container {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .container iframe {
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
