--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 @import 'https://fonts.googleapis.com/icon?family=Material+Icons';
-@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
 @import "../node_modules/angular-calendar/css/angular-calendar.css";
 
 .container {
