--- a/src/app/countdown-timer/countdown-timer.component.css
+++ b/src/app/countdown-timer/countdown-timer.component.css
@@ -102,11 +102,15 @@
 }
 
 .event-details {
+  margin-left: 10px;
   color: lightgrey;
   vertical-align: middle;
-  text-align: center;
+  text-align: left;
   font-size: 48px;
   font-family: Arial, Helvetica, sans-serif;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .event-title {
