--- a/src/app/schedule/styles.scss
+++ b/src/app/schedule/styles.scss
@@ -3,4 +3,4 @@
 @import '~highlight.js/styles/github.css';
 @import '~flatpickr/dist/flatpickr.css';
 @import '~perfect-scrollbar/css/perfect-scrollbar.css';
-@import '~angular-calendar/scss/angular-calendar.scss';
+@import 'node_modules/angular-calendar/scss/angular-calendar.scss';
